fix for some spacing issues

--- a/src/css/themes/_themes.custom.scss
+++ b/src/css/themes/_themes.custom.scss
@@ -566,3 +566,7 @@ header li a {
     display: none;
   }
 }
+
+.marg-top {
+  margin-top: 50px;
+}
